--- a/index.html
+++ b/index.html
@@ -2,22 +2,38 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Dinamicharyul</title>
-    <link rel="stylesheet" href="css/commn.css">
-    <script src ="jquery-migrate-1.4.1.min.js"></script>
-    <script src="common.js"></script>
-   
+    <!-- meta https-equiv:문서를 랜더링하기 ㅜ이한 각종 문서 헤더 정보표기 -->
+    <!-- html 4스타일 -->
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+    
+    <!-- meta : name, content 문서를 잘 검색할 수 있도록 문서에 관한 정보를 제공 -->
+    <meta name="keyword" content="HTML, CSS, JavaScript">
+    <meta name="description" content="웹 프론트엔드 강의"/>
+    <meta name="author" content="박하률">
+    <title>Bit Lounge</title>
+	<!-- page CSS -->
+	<!-- <style>
+		h1{
+			background-color: black;
+			color: yellow;
+		}
+	</style> -->
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="board">
-        <ul class="btn">
-            <li class="first"><a href="#tab01" class="ative">공지사항</a></li>
-            <li><a href="#tab02">갤러리</a></li>
-            <div class="bwrap">
-                <div class="notice">공지사항부분</div>
-                <div class="gallery">갤러리부분</div>
-            </div>
-        </ul>
-    </div>
+	<!-- Inline style 태그에 직접 style 속성을 지정
+		웹 표준에는 가장 부적합 -->
+	<!-- <h1 style="background-color:black; color: yellow; ">Welcome to the Lounge</h1> -->
+	<h1>welcom to the Lounge</h1>
+<img src="images/drinks.gif" alt="test"> 
+<img src="/ex01/images/drinks.gif" alt="절대경로">
+
+<p>라운지에서 시원한 <a href="elixir.html">건강 음료</a>동료들과의 대화로 하루 스트레스를 확 날려 버리세요. 편안한 음악도 감상하세요. 무선인터넷에도 언제든지 접속 가능합니다.   </p>
+<h3><small>오시는 길</small></h3>
+<p>3층에서 바로 찾을 수 있어요.</p>
+<p>
+	<a href="form.html">멤버십 가입</a>
+</p>
+	<p><a href="table.html">테이블 연습</a></p>
 </body>
 </html>
