--- a/index.html
+++ b/index.html
@@ -2,38 +2,91 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <!-- meta https-equiv:문서를 랜더링하기 ㅜ이한 각종 문서 헤더 정보표기 -->
-    <!-- html 4스타일 -->
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-    
-    <!-- meta : name, content 문서를 잘 검색할 수 있도록 문서에 관한 정보를 제공 -->
-    <meta name="keyword" content="HTML, CSS, JavaScript">
-    <meta name="description" content="웹 프론트엔드 강의"/>
-    <meta name="author" content="박하률">
-    <title>Bit Lounge</title>
-	<!-- page CSS -->
-	<!-- <style>
-		h1{
-			background-color: black;
-			color: yellow;
-		}
-	</style> -->
-	<link rel="stylesheet" href="css/style.css">
+    <title>세로형 메뉴 + tab연습</title>
+    <link rel="stylesheet" href="css/common.css">
+    <script src="js/jquery-1.12.3.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body>
-	<!-- Inline style 태그에 직접 style 속성을 지정
-		웹 표준에는 가장 부적합 -->
-	<!-- <h1 style="background-color:black; color: yellow; ">Welcome to the Lounge</h1> -->
-	<h1>welcom to the Lounge</h1>
-<img src="images/drinks.gif" alt="test"> 
-<img src="/ex01/images/drinks.gif" alt="절대경로">
+    <div class="popup">
+        <div class="ppopup">
+            <h1>팝업 제목</h1>
+            <p>안녕하세요<br></p>
+            <a href="#">닫기</a>
+        </div>
+    </div>
 
-<p>라운지에서 시원한 <a href="elixir.html">건강 음료</a>동료들과의 대화로 하루 스트레스를 확 날려 버리세요. 편안한 음악도 감상하세요. 무선인터넷에도 언제든지 접속 가능합니다.   </p>
-<h3><small>오시는 길</small></h3>
-<p>3층에서 바로 찾을 수 있어요.</p>
-<p>
-	<a href="form.html">멤버십 가입</a>
-</p>
-	<p><a href="table.html">테이블 연습</a></p>
+    <div class="header">
+        <h1><a href="#"><img src="imges/footerrogo.png" alt="로고"></a></h1>
+        <div class="gnb">
+            <ul>
+                <li><a href="#" class="mainnav">메인메뉴1</a>
+                    <ul class="subnav">
+                        <li><a href="#">서브메뉴1</a></li>
+                        <li><a href="#">서브메뉴2</a></li>
+                        <li><a href="#">서브메뉴3</a></li>
+                        <li><a href="#">서브메뉴4</a></li>
+                    </ul>
+                </li>
+                <li><a href="#" class="mainnav">메인메뉴2</a>
+                    <ul class="subnav">
+                        <li><a href="#">서브메뉴1</a></li>
+                        <li><a href="#">서브메뉴2</a></li>
+                        <li><a href="#">서브메뉴3</a></li>
+                        <li><a href="#">서브메뉴4</a></li>
+                    </ul>
+                </li>
+                <li><a href="#" class="mainnav">메인메뉴3</a>
+                    <ul class="subnav">
+                        <li><a href="#">서브메뉴1</a></li>
+                        <li><a href="#">서브메뉴2</a></li>
+                        <li><a href="#">서브메뉴3</a></li>
+                        <li><a href="#">서브메뉴4</a></li>
+                    </ul>
+                </li>
+                <li><a href="#" class="mainnav">메인메뉴4</a>
+                    <ul class="subnav">
+                    <li><a href="#">서브메뉴1</a></li>
+                    <li><a href="#">서브메뉴2</a></li>
+                    <li><a href="#">서브메뉴3</a></li>
+                    <li><a href="#">서브메뉴4</a></li>
+                </ul>
+            </li>
+            </ul>
+        </div>
+    </div>
+    <div class="main">
+        <ul>
+            <li><a href="#"><img src="imges/main1.png" alt="메인이미지1"></a></li>
+            <li><a href="#"><img src="imges/main2.png" alt="메인이미지2"></a></li>
+            <li><a href="#"><img src="imges/main3.png" alt="메인이미지3"></a></li>
+        </ul>
+    </div>
+    <div class="contents">
+        <div class="board">
+            <div class="btn">
+                <ul>
+                    <li><a href="#tab01" class="active">공지사항</a></li>
+                    <li><a href="#tab02">갤러리</a></li>
+                </ul>
+            </div>
+            <div class="bwrap">
+                <div class="notice">
+                    <ul>
+                        <li><a href="#" class="popupOpen">좋은 날</a><span>2022.10.12</span></li>
+                    </ul>
+                </div>
+                <div class="gallery">
+                    <ul>
+                        <li><a href="#"><img src="imges/New Piskel (18).png" alt="갤러리 01"></a></li>
+                        <li><a href="#"><img src="imges/New Piskel (19).png" alt="갤러리 02"></a></li>
+                        <li><a href="#"><img src="imges/New Piskel (20).png" alt="갤러리 03"></a></li>
+                    </ul>
+                </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
